<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:weightSum="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|right"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:background="@color/black">

        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/ac"
            android:layout_margin="5dp"
            android:textColor="#AC1515"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/power"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/power"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/back"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/divide"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:background="@color/black">

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_7"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_8"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_9"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/multiply"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:background="@color/black">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_4"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_5"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_6"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/subtract"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:background="@color/black">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_1"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_2"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_3"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/plus"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:background="@color/black">

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/_0"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/point"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/ans"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/answer"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/equal"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ButtonClick"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>